<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.alura.aluraviajens.ui.activity.ListaPacotesActivity">

    <ImageView
        android:id="@+id/lista_pacotes_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/banner_inicial_dos_pacotes"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lista_pacotes_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/especiais"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintTop_toTopOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lista_pacotes_pesquisa"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_especiais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lista_pacotes_especiais"
        app:layout_constraintBottom_toBottomOf="@+id/lista_pacotes_pais"
        android:ems="12"
        android:text="Buscar..."
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_edit_text"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_search_menu"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/lista_pacotes_pais"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_especiais"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_especiais" />

    <ListView
        android:id="@+id/lista_pacotes_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_banner_inicial"
        tools:listitem="@layout/item_pacote" />

</androidx.constraintlayout.widget.ConstraintLayout>
